# osd

./: Cargo.toml  README.md  build.rs
src/: main.rs
ui/: osd.slint  rough.slint  slider.slint
