[package]
name = "osd"
version = "0.1.0"
edition = "2024"

[dependencies]
slint = { version = "1.13.0", features = ["renderer-software"] }
spell-framework = "0.1.6"

[build-dependencies]
slint-build = "1.13.0"

[patch.crates-io]
slint = { git = "https://github.com/slint-ui/slint" }
slint-build = { git = "https://github.com/slint-ui/slint" }
i-slint-core = { git = "https://github.com/slint-ui/slint" }
i-slint-renderer-skia = { git = "https://github.com/slint-ui/slint" }
